Add a head navigation bar and basic styles

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,4 @@
-<h1>planW</h1>
-<p>A wedding application. Coming soon!</p>
+<div class="jumbotron center">
+	<h1>Wplan<br>
+	<small>A simple wedding planning app.</small></h1>
+</div>
