--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,6 @@
 <div class="jumbotron center">
 	<h1>Wplan<br>
 	<small>A simple wedding planning app.</small></h1>
+
+	<p>Made with love for Gizoubizou</p>
 </div>
