Added tasks resource link on index

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,4 +3,6 @@
 	<small>A simple wedding planning app.</small></h1>
 
 	<p>Made with love for Gizoubizou</p>
+
+	<p>Go to <%= link_to 'tasks', tasks_path %></p>
 </div>
