Cleaned up show/edit/new for Tasks. Added a Dashboard page.

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -5,7 +5,6 @@ $font-family-sans-serif:                'Lato', 'Helvetica Neue', Helvetica, Ari
 $navbar-height:                                        45px;
 $navbar-default-bg:                          white;
 $navbar-default-brand-color:      #c0392b;
-$brand-primary:                                    #c0392b;
 $jumbotron-bg:                                         white;
 
 @import 'bootstrap';
@@ -16,4 +15,8 @@ $jumbotron-bg:                                         white;
 
 .navbar-brand {
      font-weight: bold;
+}
+
+a:visited {
+	text-decoration: none;
 }
