--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,9 @@
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "About", about_path %></li> 
+        <li><%= link_to "About", about_path %></li>
+        <li><%= link_to 'Task List', tasks_path %></li>
+        <li><%= link_to 'Dashboard', dashboard_path %></li>  
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container -->
