--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,33 +1,43 @@
-<h1>Listing tasks</h1>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h1 class="panel-title">Listing tasks</h1>
+  </div>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Description</th>
-      <th>Deadline</th>
-      <th>Cost</th>
-      <th>Paidtodate</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+  <div class="panel-body">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Complete?</th>
+          <th>Title</th>
+          <th>Deadline</th>
+          <th>Left to Pay</th>
+          <th></th>
+          <th></th>
+          <th>Actions</th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @tasks.each do |task| %>
-      <tr>
-        <td><%= task.description %></td>
-        <td><%= task.deadline %></td>
-        <td><%= task.cost %></td>
-        <td><%= task.paidtodate %></td>
-        <td><%= link_to 'Show', task, { :class => "btn btn-default" } %></td>
-        <td><%= link_to 'Edit', edit_task_path(task), { :class => "btn btn-default" } %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tbody>
+        <% @tasks.each do |task| %>
+          <tr>
+            <td><%= task.complete %></td>
+            <td><%= task.title %></td>
+            <td><%= task.deadline %></td>
+            <td><%= @topay %></td>
+            <td></td>
+            <td></td>
+            <td><%= link_to 'Show', task, { :class => "btn btn-default btn-xs" } %>
+                <%= link_to 'Edit', edit_task_path(task), { :class => "btn btn-default btn-xs" } %>
+                <%= link_to 'Destroy', task, class: "btn btn-default btn-danger btn-xs", method: :delete, data: { confirm: 'Are you sure?' } %>
+              </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <br>
 
-<br>
-
-<%= link_to 'New Task', new_task_path,  { :class => "btn btn-default" } %>
+  <div class="panel-footer">
+    <%= link_to 'New Task', new_task_path, class: "btn btn-default" %>
+  </div>
+</div>
