--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New task</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', tasks_path %>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h1 class="panel-title">New Task</h1>
+  </div>
+  <div class="panel-body">
+	<%= render 'form' %>
+  </div>
+  <div class="panel-footer">
+	<%= link_to 'Back', tasks_path, class: "btn btn-default btn-sm" %>
+  </div>
+</div>
