--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -4,7 +4,7 @@ $body-bg:                                                   #ecf0f1;
 $font-family-sans-serif:                'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $navbar-height:                                        45px;
 $navbar-default-bg:                          white;
-$navbar-default-brand-color:      #c0392b;
+$navbar-default-brand-color:      #9b59b6;
 $jumbotron-bg:                                         white;
 
 @import 'bootstrap';
@@ -19,4 +19,8 @@ $jumbotron-bg:                                         white;
 
 a:visited {
 	text-decoration: none;
+}
+
+#logo {
+	color: #9b59b6;
 }
