Polish tasks views

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>For Gizoubizou</h1>
+<p>A simple wedding planning application built for <span class="label label-info" href="https://www.facebook.com/alicia.barchechath">my wife-to-be</span> </p>
