--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron center">
 	<h1><span id="logo">Wplan</span><br><small>A simple wedding planning app.</small></h1>
 
-	<p>Made with love for Gizoubizou</p>
+	<p><span class="label label-success" href="https://www.facebook.com/alicia.barchechath">Made with love for Gizoubizou</span></p>
 
 	<hr>
 
