--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h1 class="panel-title center"><%= @task.title %><strong> (#<%= @task.id %>)</strong></h1>
+    <h1 class="panel-title center"><%= @tasktitle %><strong> (#<%= @task.id %>)</strong></h1>
   </div>
   
   <div class="panel-body">
