--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -46,18 +46,12 @@
       </div>
     </div>
 
-    <div class="form-group">
-      <%= f.label :notes, class: "col-sm-2 control-label" %>
-      <div class="col-sm-9">
-        <%= f.text_field :notes, class: "form-control" %>
-      </div>
-    </div>
 </div>
 
   <div class="panel form-group col-sm-offset-3 col-sm-6">
     <div class="panel checkbox">
-      <%= f.label :complete, "Is this task complete?" %>
-      <%= f.check_box :complete %>
+      <%= f.label :is_complete, "Is this task complete?" %>
+      <%= f.check_box :is_complete %>
     </div>
     <hr>
     <%= f.submit "Save this task", class: "btn btn-success btn-lg btn-block"  %>
